update config file

--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
   "_resolved": "http://registry.npm.taobao.org/img-vuer/download/img-vuer-0.9.22.tgz",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/expressjs/express.git"
+    "url": "git+https://github.com/Jabbar2010/vue-gallery-viewer.git"
   }
 }
